# minimal-git

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: cat_file.py  commit_tree.py  config.py  git_objects.py  hash_object.py  index_to_tree.py  ls_files.py  min_git.py  mode.py  paths.py  read_tree.py  staging.py  update_index.py  util.py  write_tree.py
src/minimal_git/: cat_file.py  commit_tree.py  config.py  git_objects.py  hash_object.py  index_to_tree.py  ls_files.py  min_git.py  read_tree.py  staging.py  update_index.py  util.py  write_tree.py
